Replace based on comments

--- a/todo-ts/package.json
+++ b/todo-ts/package.json
@@ -45,7 +45,14 @@
     "parserOptions": {
       "parser": "@typescript-eslint/parser"
     },
-    "rules": {}
+    "rules": {
+      "@typescript-eslint/no-unused-vars": [
+        2,
+        {
+          "args": "none"
+        }
+      ]
+    }
   },
   "browserslist": [
     "> 1%",
